--- a/static/login.html
+++ b/static/login.html
@@ -101,7 +101,7 @@ function checkEmail() {
                         <h1 align="center" class="panel-title">Please enter the Deployment ID [xxxxx]</h1>
                     </div>
                     <div class="panel-body">
-                        <form role="form" name="login-form" class="login-form" action="/login" method="post">
+                        <form role="form" name="login-form" class="login-form" action="/SBlogin" method="post">
                             <fieldset>
                                 <div class="form-group">
                                     <input class="form-control" placeholder="Deployment ID" id="deployment_id" name="deployment_id" autofocus required>
