--- a/static/index.html
+++ b/static/index.html
@@ -28,13 +28,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="index.html">
+               <!-- <a href="index.html">
                     <img src="assets/img/logo.jpg" style="height:75px;width:150px">
-				</a>
+				</a> -->
             </div>
 			</p>
-			<span style="vertical-align: middle;font-size:200%;color:white"><b>Havells Street Light Management System</b></span>
-            <div class="header-right">
+		<!--	<span style="vertical-align: middle;font-size:200%;color:white"><b>Havells Street Light Management System</b></span>
+           --> <div class="header-right">
                 <!--<span class="col-sm-10" style="margin-right:  30px">-->
                 <!--<span style="font-size:80%;color:white;margin-right: 20px">-->
                    <table style="font-size: 10px">
