--- a/static/admintool.html
+++ b/static/admintool.html
@@ -148,13 +148,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="index.html">
+           <!-- <a href="index.html">
                 <img src="assets/img/logo.jpg" style="height:75px;width:150px">
-            </a>
+            </a> -->
         </div>
         </p>
-        <span style="vertical-align: middle;font-size:200%;color:white"><b>Havells Street Light Management System</b></span>
-
+   <!--     <span style="vertical-align: middle;font-size:200%;color:white"><b>Havells Street Light Management System</b></span>
+-->
         <div class="header-right">
             <table style="font-size: 10px">
                 <tr>
@@ -257,6 +257,14 @@
                                                 <span class="input-group-addon" style="width: 20%">SCU ID</span>
                                                 <select id="scu" name="scu" class="form-control" required >
                                                 </select></div>
+					<div id = "locMode">
+						<table>
+							<tr> <td style="width: 50%"></td>
+							<td><center><input id="autoFill" style="margin-right: 20px" type="submit" class="btn btn-info" value="AutoFill"></center></td> 
+							</tr>
+						</table>
+						</div>
+					<div  id = 'lanlatview'>
                                             <table style="width: 80%;margin: auto;margin-top: 20px;margin-bottom: 20px">
                                                 <tr>
                                                     <td>
@@ -281,7 +289,7 @@
                                                     </td>
                                                 </tr>
                                             </table>
-
+					</div>
                                             <center><input id="update" style="margin-right: 20px" type="submit" class="btn btn-info" value="Update Location"></center>
                                         </div>
                                     </form>
