--- a/static/configure.html
+++ b/static/configure.html
@@ -164,13 +164,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="index.html">
+               <!-- <a href="index.html">
                     <img src="assets/img/logo.jpg" style="height:75px;width:150px">
-				</a>
+				</a>-->
             </div>
 			</p>
-			<span style="vertical-align: middle;font-size:200%;color:white"><b>Havells Street Light Management System</b></span>
-
+		<!--	<span style="vertical-align: middle;font-size:200%;color:white"><b>Havells Street Light Management System</b></span>
+			-->
             <div class="header-right">
 
                 <!-- <a href="message-task.html" class="btn btn-info" title="New Message"><b>30 </b><i class="fa fa-envelope-o fa-2x"></i></a>
