--- a/static/map-view.html
+++ b/static/map-view.html
@@ -751,13 +751,13 @@ function Infofunction(event)
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="index.html">
+             <!--   <a href="index.html">
                     <img src="assets/img/logo.jpg" style="height:75px;width:150px">
-				</a>
+				</a>-->
             </div>
 			</p>	
-			<span style="vertical-align: middle;font-size:200%;color:white"><b>Havells Street Light Management System</b></span>
-            <div class="header-right">
+		<!--	<span style="vertical-align: middle;font-size:200%;color:white"><b>Havells Street Light Management System</b></span>
+           --> <div class="header-right">
 				<table style="font-size: 10px">
 					<tr>
 						<td>Welcome &nbsp;<a href="#" style="color: white" id="uid"></a></td>
